Add service manager
