# swagger/dev.json
@@ -1,239 +1,1 @@
-{
-  "swagger": "2.0",
-  "info": {
-    "title": "Distributed Big Data service Open Platform",
-    "version": "1.0.0",
-    "description": "Distributed Big Data service Open Platform back-end API",
-    "contact": {
-      "name": "Yimin Lin",
-      "email": "linyimin520812@gmail.com"
-    }
-  },
-  "host": "localhost:5000",
-  "basePath": "/",
-  "paths": {
-    "/databases": {
-      "get": {
-        "description": "Get All mysql databases",
-        "tags": [
-          ["databases"]
-        ],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/databases/tables": {
-      "get": {
-        "tags": [
-          ["databases"]
-        ],
-        "description": "Get all tables' name from a database",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "databaseName",
-          "description": "database name to database for geting all tables.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/databases/tables/{name}": {
-      "get": {
-        "tags": [
-          ["databases"]
-        ],
-        "description": "Get all tables' fields from a table",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "name",
-          "description": "Table name to table for geting all fields.",
-          "in": "path",
-          "required": true,
-          "type": "string"
-        }, {
-          "name": "databaseName",
-          "description": "database name to database for geting all tables.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/service/parameter-type": {
-      "get": {
-        "tags": [
-          ["service"]
-        ],
-        "description": "Get parameters' type and responses' type",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "sql",
-          "description": "A sql staetment.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/service/generate": {
-      "post": {
-        "tags": [
-          ["service"]
-        ],
-        "description": "Get parameters' type and responses' type",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "method",
-          "description": "The request method of the service which will be generated.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }, {
-          "name": "path",
-          "description": "The URL of the service.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }, {
-          "name": "name",
-          "description": "The name of the service.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/sql/generate": {
-      "post": {
-        "tags": [
-          ["sql"]
-        ],
-        "description": "Generate a sql statement",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "select",
-          "in": "body",
-          "description": "Target field want to get",
-          "required": true,
-          "schema": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }, {
-          "name": "from",
-          "in": "body",
-          "description": "database and table names",
-          "required": true,
-          "schema": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }, {
-          "name": "where",
-          "in": "body",
-          "description": "Condition of sql",
-          "required": true,
-          "schema": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }, {
-          "name": "groupBy",
-          "in": "body",
-          "description": "Group by condition",
-          "required": false,
-          "schema": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }, {
-          "name": "orderBy",
-          "in": "body",
-          "description": "Order by condition",
-          "required": false,
-          "schema": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }, {
-          "name": "limit",
-          "in": "body",
-          "description": "limit",
-          "required": false,
-          "schema": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/sql/test": {
-      "get": {
-        "tags": [
-          ["sql"]
-        ],
-        "description": "Test generated sql",
-        "produces": ["application/json"],
-        "parameters": [{
-          "name": "sql",
-          "description": "A sql staetment.",
-          "in": "query",
-          "required": true,
-          "type": "string"
-        }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    }
-  },
-  "definitions": {},
-  "responses": {},
-  "parameters": {},
-  "securityDefinitions": {},
-  "tags": []
-}
+{"swagger":"2.0","info":{"title":"Distributed Big Data service Open Platform","version":"1.0.0","description":"Distributed Big Data service Open Platform back-end API","contact":{"name":"Yimin Lin","email":"linyimin520812@gmail.com"}},"host":"localhost:5000","basePath":"/","paths":{"/databases":{"get":{"description":"Get All mysql databases","tags":[["databases"]],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/databases/tables":{"get":{"tags":[["databases"]],"description":"Get all tables' name from a database","produces":["application/json"],"parameters":[{"name":"databaseName","description":"database name to database for geting all tables.","in":"query","required":true,"type":"string"}],"responses":{"200":{"description":"OK"}}}},"/databases/tables/{name}":{"get":{"tags":[["databases"]],"description":"Get all tables' fields from a table","produces":["application/json"],"parameters":[{"name":"name","description":"Table name to table for geting all fields.","in":"path","required":true,"type":"string"},{"name":"databaseName","description":"database name to database for geting all tables.","in":"query","required":true,"type":"string"}],"responses":{"200":{"description":"OK"}}}},"/service/consume":{"get":{"tags":[["service-consume"]],"description":"Get all services in the register","produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service/parameter-type":{"get":{"tags":[["service"]],"description":"Get parameters' type and responses' type","produces":["application/json"],"parameters":[{"name":"sql","description":"A sql staetment.","in":"query","required":true,"type":"string"}],"responses":{"200":{"description":"OK"}}}},"/service/generate":{"post":{"tags":[["service"]],"description":"Get parameters' type and responses' type","produces":["application/json"],"parameters":[{"name":"method","description":"The request method of the service which will be generated.","in":"query","required":true,"type":"string"},{"name":"path","description":"The URL of the service.","in":"query","required":true,"type":"string"},{"name":"name","description":"The name of the service.","in":"query","required":true,"type":"string"}],"responses":{"200":{"description":"OK"}}}},"/service-manager/all":{"get":{"tags":[["service-manager"]],"description":"Get all services in the register","produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service-manager/project":{"get":{"tags":[["service-manager"]],"description":"Get all services in the register by project","parameters":[{"name":"projectName","description":"project name for geting all services' infomation.","in":"query","required":false,"type":"string"},{"name":"serviceName","description":"service name for geting it's infomation.","in":"query","required":false,"type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service-manager/create":{"post":{"tags":[["service-manager"]],"description":"create a service","parameters":[{"name":"project","description":"project name for geting all services' infomation.","in":"body","schema":{"type":"object","required":["name","address","path","method"],"properties":{"name":{"type":"string","description":"The service name"},"address":{"type":"string","description":"The service address"},"port":{"type":"string","description":"The service port"},"path":{"type":"string","description":"The service path"},"method":{"type":"string","description":"The service method"},"project":{"type":"string","description":"The service belongs to which project"},"parameter":{"type":"array","items":{"type":"object","properties":{"name":{"type":"string","description":"The parameter type"},"type":{"type":"string","description":"The parameter type"},"description":{"type":"string","description":"The parameter description"},"isRequired":{"type":"string","description":"The parameter is required or not"}}},"description":"The service parameter"},"response":{"type":"object","description":"The service name","properties":{"name":{"type":"string"}}},"statusCode":{"type":"array","items":{"type":"object","properties":{"status":{"type":"string","description":"The status number"},"info":{"type":"string","description":"The information of status code"},"description":{"type":"string","description":"The parameter description"}}}},"description":{"type":"string","description":"Description of the service"}}}}],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service-manager/delete":{"get":{"tags":[["service-manager"]],"description":"Get all services in the register by project","parameters":[{"name":"projectName","description":"project name for delete all services which in register.","in":"query","required":false,"type":"string"},{"name":"serviceName","description":"service name deleting.","in":"query","required":true,"type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service-manager/offline":{"get":{"tags":[["service-manager"]],"description":"Get all services in the register by project","parameters":[{"name":"projectName","description":"project name for delete all services which in register.","in":"query","required":false,"type":"string"},{"name":"serviceName","description":"service name deleting.","in":"query","required":true,"type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service-manager/release":{"get":{"tags":[["service-manager"]],"description":"Release a service","parameters":[{"name":"projectName","description":"project name for releasing service which in register.","in":"query","required":false,"type":"string"},{"name":"serviceName","description":"service name.","in":"query","required":true,"type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/service-manager/query":{"get":{"tags":[["service-manager"]],"description":"Filter services in the register by project","parameters":[{"name":"projectName","description":"project name for delete all services which in register.","in":"query","required":false,"type":"string"},{"name":"serviceName","description":"service name deleting.","in":"query","required":false,"type":"string"},{"name":"status","description":"service status.","in":"query","required":false,"type":"string"}],"produces":["application/json"],"responses":{"200":{"description":"OK"}}}},"/sql/generate":{"post":{"tags":[["sql"]],"description":"Generate a sql statement","produces":["application/json"],"parameters":[{"name":"select","in":"body","description":"Target field want to get","required":true,"schema":{"type":"array","items":{"type":"string"}}},{"name":"from","in":"body","description":"database and table names","required":true,"schema":{"type":"array","items":{"type":"string"}}},{"name":"where","in":"body","description":"Condition of sql","required":true,"schema":{"type":"array","items":{"type":"string"}}},{"name":"groupBy","in":"body","description":"Group by condition","required":false,"schema":{"type":"array","items":{"type":"string"}}},{"name":"orderBy","in":"body","description":"Order by condition","required":false,"schema":{"type":"array","items":{"type":"string"}}},{"name":"limit","in":"body","description":"limit","required":false,"schema":{"type":"array","items":{"type":"string"}}}],"responses":{"200":{"description":"OK"}}}},"/sql/test":{"get":{"tags":[["sql"]],"description":"Test generated sql","produces":["application/json"],"parameters":[{"name":"sql","description":"A sql staetment.","in":"query","required":true,"type":"string"}],"responses":{"200":{"description":"OK"}}}}},"definitions":{},"responses":{},"parameters":{},"securityDefinitions":{},"tags":[]}
